--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gnosis.pm/safe-apps-wagmi": "^1.0.3",
     "@rainbow-me/rainbowkit": "^0.7.0",
     "ethers": "^5.0.0",
     "next": "^12.1.6",
