--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@gnosis.pm/safe-apps-wagmi": "^1.0.3",
-    "@rainbow-me/rainbowkit": "^0.7.0",
+    "@rainbow-me/rainbowkit": "0.6.2",
     "ethers": "^5.0.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
